--- a/Public/index.html
+++ b/Public/index.html
@@ -4,7 +4,8 @@
   <meta charset='UTF-8'>
   <title>Llama Jams (ft. D.J Magpie)</title>
   <link rel="stylesheet" href='assets/css/player.css' type='text/css'>
-  <script src='bower_components/jquery/dist/jquery.min.js'></script>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+  <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
   <script src="http://connect.soundcloud.com/sdk.js"></script>
 </head>
 <body>
