--- a/Public/index.html
+++ b/Public/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href='assets/css/player.css' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
-  <script src="http://connect.soundcloud.com/sdk.js"></script>
+  <script src="https://connect.soundcloud.com/sdk.js"></script>
 </head>
 <body>
   <div id='app'></div>
